<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_normal"
    tools:context=".EditorActivity">

    <!-- Overview -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_xtra_small">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />

            <!-- Price fields -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/EditorFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_product_price"
                    android:inputType="number" />

                <!-- Currency for price ($) -->
                <TextView
                    android:id="@+id/label_price_units"
                    style="@style/EditorUnitsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_product_price" />

            </RelativeLayout>

            <!-- Supplier name field -->
            <EditText
                android:id="@+id/edit_product_supplier_name"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_product_supplier_name"
                android:inputType="textCapWords" />

            <!-- Supplier email field -->
            <EditText
                android:id="@+id/edit_product_supplier_email"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_product_supplier_email"
                android:inputType="textEmailAddress" />

        </LinearLayout>
    </LinearLayout>

    <!-- Category -->
    <LinearLayout
        android:id="@+id/container_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Category drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/spinner_height"
                android:paddingRight="@dimen/padding_normal"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <!-- Quantity -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category_measurement" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <Button
                android:id="@+id/button_decrease_quantity"
                android:layout_width="@dimen/button_change_quantity_size"
                android:layout_alignParentLeft="true"
                android:layout_height="@dimen/button_change_quantity_size"
                android:text="-" />

            <Button
                android:id="@+id/button_increase_quantity"
                android:layout_alignParentRight="true"
                android:layout_width="@dimen/button_change_quantity_size"
                android:layout_height="@dimen/button_change_quantity_size"
                android:text="+" />

            <LinearLayout
                android:id="@+id/layout_quantity"
                android:layout_toRightOf="@id/button_decrease_quantity"
                android:layout_toLeftOf="@id/button_increase_quantity"
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:orientation="horizontal">

                <!-- Quantity field -->
                <EditText
                    android:id="@+id/edit_product_quantity"
                    style="@style/EditorFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="number"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/padding_xtra_small"
                    android:paddingRight="@dimen/padding_xtra_small"
                    android:textAlignment="center"
                    tools:text="13" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/product_image_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/product_image_height"
            android:layout_weight="3"
            android:scaleType="fitStart"
            tools:src="@drawable/ic_empty_image" />

        <Button
            android:id="@+id/button_choose_image"
            style="@style/EditorFieldStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_weight="1"
            android:text="@string/button_choose_image" />

    </LinearLayout>

    <Button
        android:id="@+id/button_order_more"
        style="@style/EditorFieldStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_order_height"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/button_order_more" />

</LinearLayout>