<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of products -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="left"
    android:orientation="horizontal"
    android:padding="@dimen/padding_small">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"
            android:focusable="false"
            android:text="@string/button_sale_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="15"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/catalogNameColor"
            android:textSize="@dimen/product_name_size"
            tools:text="Cookies" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/currency_symbol_euro"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/catalogPriceColor" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_margin"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/catalogPriceColor"
                tools:text="5" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/catalogQuantityColor"
                tools:text="3" />

            <TextView
                android:id="@+id/left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:fontFamily="sans-serif"
                android:text="@string/quantity_left"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/catalogQuantityColor" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>